--- a/index.html
+++ b/index.html
@@ -1,48 +1,84 @@
+<!-- login.html -->
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Masterop - Sistema de Chamados</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login - Sistema Helpdesk</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+
+        .login-container {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .login-container h2 {
+            margin-bottom: 20px;
+        }
+
+        .login-container input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .login-container button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .login-container button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Masterop - Sistema de Chamados</h1>
-    </header>
-    <div class="container">
-        <!-- Card para Abrir Chamado -->
-        <div class="card">
-            <h3>Abrir Novo Chamado</h3>
-            <form id="form-chamado">
-                <div class="form-group">
-                    <label for="titulo">Título</label>
-                    <input type="text" id="titulo" required>
-                </div>
-                <div class="form-group">
-                    <label for="descricao">Descrição</label>
-                    <textarea id="descricao" rows="4" required></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="prioridade">Prioridade</label>
-                    <select id="prioridade">
-                        <option value="Alta">Alta</option>
-                        <option value="Média">Média</option>
-                        <option value="Baixa">Baixa</option>
-                    </select>
-                </div>
-                <button type="submit">Criar Chamado</button>
-            </form>
-            <div id="feedback" class="feedback"></div>
-        </div>
-
-        <!-- Card para Acompanhar Chamados -->
-        <div class="card">
-            <h3>Meus Chamados</h3>
-            <button onclick="carregarChamados()">Atualizar Lista</button>
-            <ul id="lista-chamados"></ul>
-        </div>
+    <div class="login-container">
+        <h2>Login</h2>
+        <input type="text" id="username" placeholder="Usuário" required>
+        <input type="password" id="password" placeholder="Senha" required>
+        <button onclick="login()">Entrar</button>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        function login() {
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            fetch('/api/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ username, password })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    alert('Login bem-sucedido!');
+                    window.location.href = '/dashboard';
+                } else {
+                    alert('Login falhou: ' + data.message);
+                }
+            });
+        }
+    </script>
 </body>
 </html>
